Version 0.1.1
-------------

* Pre-fill metric and dimensions when editing checks
* Make autocomplete views require login

Version 0.1.0
-------------

* Initial Version